syntax = "proto3";

package io.xpring;

import "signed_transaction.proto";

// A request to submit the signed transaction to the ledger.
// Next field: 2
message SubmitSignedTransactionRequest {
  // The signed transaction to submit.
  bytes signed_transaction = 1;
}
